--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ Pillow==9.2.0
 social-auth-app-django==5.0.0
 python-dotenv==0.21.0
 django-crispy-forms==1.14.0
+django-redis==5.2.0
+django-debug-toolbar==3.6.0
