--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-markdownify==0.9.2
 Markdown==3.4.1
 Pillow==9.2.0
 social-auth-app-django==5.0.0
+pytest-django==4.5.2
 python-dotenv==0.21.0
 django-crispy-forms==1.14.0
 django-redis==5.2.0
