--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ django-crispy-forms==1.14.0
 django-redis==5.2.0
 django-debug-toolbar==3.6.0
 celery==5.2.7
+
+# For production
+gunicorn
+psycopg2-binary
